View Issue Details Jump to Notes ] Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0008837CMakeCTestpublic2009-04-02 19:312016-06-10 14:30
ReporterJulien Jomier 
Assigned ToKitware Robot 
PrioritynormalSeveritymajorReproducibilityalways
StatusclosedResolutionmoved 
PlatformOSOS Version
Product VersionCMake-2-6 
Target VersionFixed in Version 
Summary0008837: ctest_run_script infinite loop
DescriptionWhen running ctest_run_script with the NEW_PROCESS option, and calling another script which has a ctest_run_script, ctest enters an infinite loop. Removing the NEW_PROCESS option has the expected behavior.
TagsNo tags attached.
Attached Fileszip file icon CTestLoop.zip [^] (462 bytes) 2009-04-02 19:31

 Relationships

  Notes
(0041535)
Kitware Robot (administrator)
2016-06-10 14:27

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2009-04-02 19:31 Julien Jomier New Issue
2009-04-02 19:31 Julien Jomier File Added: CTestLoop.zip
2009-09-14 14:29 Bill Hoffman Status new => assigned
2009-09-14 14:29 Bill Hoffman Assigned To => Bill Hoffman
2009-09-14 14:29 Bill Hoffman Assigned To Bill Hoffman => Ken Martin
2010-12-14 11:09 David Cole Assigned To Ken Martin =>
2010-12-15 07:02 David Cole Assigned To => David Cole
2011-10-25 22:51 David Cole Assigned To David Cole =>
2011-10-25 22:51 David Cole Status assigned => backlog
2016-06-10 14:27 Kitware Robot Note Added: 0041535
2016-06-10 14:27 Kitware Robot Status backlog => resolved
2016-06-10 14:27 Kitware Robot Resolution open => moved
2016-06-10 14:27 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:30 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team